--- a/backup_manager/gui/static/css/styles.css
+++ b/backup_manager/gui/static/css/styles.css
@@ -19,13 +19,13 @@
 .card{
     margin-bottom: 20px;
     padding: 10px;
-    transition: 1s;
+    transition: var(--transition-time);
     border-radius: 5px;
-    position:relative;overflow:hidden;
+    position:relative;
+    overflow:hidden;
 }
 
 .card:hover{
-    background-color: var(--color-surface-00-hover);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
 }
 
@@ -67,7 +67,7 @@ body {
 
 
   html{
-    background: #121212;
+    background: var(--color-background);
   }
   .h1{
     font-size:40px;
