--- a/backup_manager/gui/templates/settings.html
+++ b/backup_manager/gui/templates/settings.html
@@ -10,6 +10,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="../static/css/styles.css" rel="stylesheet">
+        <link href="../static/css/elevation.css" rel="stylesheet">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
@@ -23,7 +24,7 @@
 
 
   <div style="margin-top: 50px">
-    <form class="card adder" id="adder">
+    <form class="card adder elevation-00" id="adder">
       <label style="margin-right: 30px; margin-left: 30px">pushbullet token</label>
       <input class="input-large" type="text" name="token" placeholder="token"  value="{{token}}" required autofocus>
       <br>
